--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: adaptivetau
 Type: Package
 Title: Tau-leaping stochastic simulation
-Version: 1.0
+Version: 1.0-1
 Date: 2012-04-09
 Author: Philip Johnson
 Maintainer: Philip Johnson <plfjohnson@emory.edu>
+Depends: R (>= 2.10.1)
+Enhances: compiler
 Description: Implements adaptive tau leaping to approximate the
         trajectory of a continuous-time stochastic process as
         described by Cao et al. (2007) The Journal of Chemical
