--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: adaptivetau
 Type: Package
 Title: Tau-leaping stochastic simulation
-Version: 1.0-1
+Version: 1.0
 Date: 2012-04-09
 Author: Philip Johnson
 Maintainer: Philip Johnson <plfjohnson@emory.edu>
