--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: adaptivetau
 Type: Package
-Title: Tau-leaping stochastic simulation
-Version: 2.2
-Date: 2014-11-19
+Title: Tau-Leaping Stochastic Simulation
+Version: 2.2-1
+Date: 2016-9-19
 Author: Philip Johnson
-Maintainer: Philip Johnson <plfjohnson@emory.edu>
+Maintainer: Philip Johnson <plfj@umd.edu>
 Depends: R (>= 2.10.1)
 Enhances: compiler
 Description: Implements adaptive tau leaping to approximate the
