--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,9 @@ Depends: R (>= 2.10.1)
 Enhances: compiler
 Description: Implements adaptive tau leaping to approximate the
         trajectory of a continuous-time stochastic process as
-        described by Cao et al. (2007) The Journal of Chemical
-        Physics.  This package is based upon work supported by
-        NSF DBI-0906041 and NIH K99-GM104158 to Philip Johnson and
-        NIH R01-AI049334 to Rustom Antia.
+        described by Cao et al. (2007) The Journal of Chemical Physics
+        <doi:10.1063/1.2745299>. This package is based upon work
+        supported by NSF DBI-0906041 and NIH K99-GM104158 to Philip
+        Johnson and NIH R01-AI049334 to Rustom
+        Antia.http://dx.doi.org/
 License: GPL (>= 3)
