stupid trailing typo in revised DESCRIPTION
git-svn-id: file:///home/pjohnson/repo/prj/sim_algos/adaptivetau@330 26082704-6efc-0310-a1c6-a466a319e90f

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,5 @@ Description: Implements adaptive tau leaping to approximate the
         <doi:10.1063/1.2745299>. This package is based upon work
         supported by NSF DBI-0906041 and NIH K99-GM104158 to Philip
         Johnson and NIH R01-AI049334 to Rustom
-        Antia.http://dx.doi.org/
+        Antia.
 License: GPL (>= 3)
