--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: adaptivetau
 Type: Package
 Title: Tau-Leaping Stochastic Simulation
-Version: 2.2-3
-Date: 2019-3-19
+Version: 2.3
+Date: 2023-11-28
 Author: Philip Johnson
 Maintainer: Philip Johnson <plfj@umd.edu>
 Depends: R (>= 2.10.1)
