--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: adaptivetau
 Type: Package
 Title: Tau-Leaping Stochastic Simulation
-Version: 2.3
-Date: 2023-11-28
+Version: 2.3-1
+Date: 2024-04-17
 Author: Philip Johnson
 Maintainer: Philip Johnson <plfj@umd.edu>
 Depends: R (>= 2.10.1)
@@ -15,3 +15,5 @@ Description: Implements adaptive tau leaping to approximate the
         supported by NSF DBI-0906041 and NIH K99-GM104158 to Philip
         Johnson and NIH R01-AI049334 to Rustom Antia.
 License: GPL (>= 3)
+URL: https://github.com/plfjohnson/adaptivetau
+BugReports: https://github.com/plfjohnson/adaptivetau/issues
