--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,13 @@
 Package: adaptivetau
 Type: Package
 Title: Tau-Leaping Stochastic Simulation
-Version: 2.3-1
-Date: 2024-04-17
-Author: Philip Johnson
-Maintainer: Philip Johnson <plfj@umd.edu>
+Version: 2.3-2
+Date: 2024-10-24
+Authors@R: person(given = "Philip",
+                  family = "Johnson",
+                  role = c("aut", "cre"),
+                  email = "plfj@umd.edu",
+                  comment = c(ORCID = "0000-0001-6087-7064"))
 Depends: R (>= 2.10.1)
 Enhances: compiler
 Description: Implements adaptive tau leaping to approximate the
